# ChangeLog for games-rpg/zsxd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsxd/ChangeLog,v 1.9 2015/02/11 19:41:46 hasufell Exp $

  11 Feb 2015; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  drop myself from maintainership

  26 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org> -zsxd-1.8.0-r1.ebuild:
  old

  27 Dec 2014; Agostino Sarubbo <ago@gentoo.org> zsxd-1.7.1-r1.ebuild:
  Stable for amd64, wrt bug #521092

*zsxd-1.9.0 (24 Aug 2014)

  24 Aug 2014; Julian Ospald <hasufell@gentoo.org> +zsxd-1.9.0.ebuild:
  version bump

*zsxd-1.8.0-r1 (24 Aug 2014)
*zsxd-1.7.1-r1 (24 Aug 2014)

  24 Aug 2014; Julian Ospald <hasufell@gentoo.org> -zsxd-1.7.1.ebuild,
  +zsxd-1.7.1-r1.ebuild, -zsxd-1.8.0.ebuild, +zsxd-1.8.0-r1.ebuild:
  fix dependencies

*zsxd-1.8.0 (22 May 2014)

  22 May 2014; Julian Ospald <hasufell@gentoo.org>
  +files/zsxd-1.8.0-paths.patch, +zsxd-1.8.0.ebuild:
  version bump

  13 Apr 2014; Julian Ospald <hasufell@gentoo.org> zsxd-1.7.1.ebuild:
  update license info wrt #507412

  13 Apr 2014; Julian Ospald <hasufell@gentoo.org> zsxd-1.7.1.ebuild:
  set RESTRICT=mirror wrt #507412

*zsxd-1.7.1 (29 Jan 2014)

  29 Jan 2014; Julian Ospald <hasufell@gentoo.org> +zsxd-1.7.1.ebuild,
  +files/zsxd-1.7.1-paths.patch, +metadata.xml:
  initial import