@@ -5,26 +5,21 @@ AUX zsxd-1.7.1-paths.patch 1115 SHA256 29cd2b18c9dafb3c022ede9bbeccb36421d5d2136
 AUX zsxd-1.8.0-paths.patch 1115 SHA256 29cd2b18c9dafb3c022ede9bbeccb36421d5d2136e685169a9d9853918bdd361 SHA512 3add02a81f19db206b68060dac9e428d219a16b8617c813c81609d4b2deb8f5bf244b7e292cdb63ff0f1b8af85664e5e00649967a281ee31295fa77c5dc997b7 WHIRLPOOL a2a699d35216d11fd9d63241d46a72542c4dba87fd696ed55c56e7587c21a88afb04ea6f916f3081c3d762ad751db6c3bec5233f44b19b4c63a81311684ceb22
 DIST zsxd-1.7.1.tar.gz 3696807 SHA256 ea5557fcc028b39758e63b1c26f71dead3a743f15f74b2391eb618d210f777dc SHA512 8edea69ad1599b0bcccb3db4f030613dd04cdd0575722347869e799536639face6082fe51af5975a15a215fdb775978c654b9d46821c261c242573f6213f818d WHIRLPOOL a83705bcfd7cfe39abff02f8c5fb5241b07c7272e8c5643f7600b9f65e3993ceb83524f26da81f12a53d5800a5292eb75f5a9327745b6a63b4a8f392f80b3135
 DIST zsxd-1.9.0.tar.gz 3706125 SHA256 2ac95c1389706e989cd37b3ce75cb8c94e19832b6d138cd53abd490eb7fd8ff6 SHA512 cecb8b4ff40b7129bb516cf71e9bbbc92e10ace944c735eb2885dbf0e0b8adef80491c1874ee91efb2c9779b819d0217639fe85f9e3a085c980af6a2972e571e WHIRLPOOL b927e6d96c5201b7af48a8bee6b387a2a1c168525685753d363618a4e167510024f18ba70f097dfdb91938be6180b405dbed7f469f3f5133cdcf53532f6b3126
-EBUILD zsxd-1.7.1-r1.ebuild 1425 SHA256 72ea377703520100cd349c4433432de0b51f9aa408996ea26767d7804fc7057c SHA512 76ab15c5722859726b1839ba748600d4b361c4fc6ee9482569851eef12732399c0c42d17c588f39fbfeb82a62d037868ce8280e92489d6f421254c9240cf7265 WHIRLPOOL 4aefb64a69ee09a6dc75a8043c40e307ad9a273b4867d8cd283a2a53d44c9bfbc1eee4e32f11a7fe044ac7ed76b11e54b36adccaddb1312b0715d10942e65676
-EBUILD zsxd-1.9.0.ebuild 1395 SHA256 b8e0d733227be1793fcaaccdfcc40f4dbfa1a81b2f5d37db4686e7f458f46c0c SHA512 48881cac68df42c2c94fd69af9c4334afdf53106fd8006b416802a528a83989478f1f44428c7dc44e3f1f6cacf39e9bd7f34edb8418c1be518db2ab707eaafa6 WHIRLPOOL 56c04d97a3442bd99a526e772bcbf2d23cbb75216c7d278d28a678938dd9cda80301a22ba36b28cc6cfe3a92c4d0c8e9a153986f32b0e213d7394d962b5f1559
-MISC ChangeLog 1348 SHA256 d12bdf84b836222caffa20677413c65a125c14b7f8702c065f88df503fcefa44 SHA512 ca78fcfbb59e7e59fe14def0546b8ae43c0b7ca23880775cd3ef8161b998ddc21f492a09e695595f6b75e44c5b987249199f121f1bb9b0b4c3253b57acfb7470 WHIRLPOOL 1958258bdcf53aa6bbc926fb5663120cac135e5dca22ee2239cad1e92e708fcd1e0200eb2e18e22a5e3189d59abcb5ef34c31416523cbcbbd27791e26a6d66b1
+EBUILD zsxd-1.7.1-r1.ebuild 1433 SHA256 cc49208a5c77f9686d0be4ae086f5edbd6bcb950c491c544adff1eaa6137bbec SHA512 831db8ccc8a39b78fd16537f50df5ef1ff24822a39db949dfc927ce0e77267df6e988c3fd0a605136f35398a524f12174e988b27c3ed0645c767fe70f4409a41 WHIRLPOOL b020b85572037542c69d0be17c5d601601ed3781315dd9a7b1967dbf14426821b50499a22bc68fe765fb6f228db0034b25c0e0abc78e2781a14d05294ef83f79
+EBUILD zsxd-1.9.0.ebuild 1416 SHA256 70884b34482f445dc9d5cf6f98e9cf928a90ecfeef9d0d618b1183d888d8f652 SHA512 42b90f95453c69b94aec46511545c732c5ac37d662ab2a6c1a9ccf6d4da21657459f99eaff99b8f3d53d432fd399487b61447060b58397d4247c3ed9ed262e8f WHIRLPOOL f4cd3918327c2fbe653343fe3f01b68807037e31a682238ff863c184dde2c8fe96124f188a349f0305ba6d232fa57dbcf400609c5be4f6c85f4d66879d5c133c
+MISC ChangeLog 1491 SHA256 793e7cc425160c550e8b86b00f37f5c2dcb0d2efef834736234cdc94c310cf9d SHA512 aaddd4d09c2fc54358da682f65dfcafa4a7256f2af6c7b0b35749fa5285b724aac441f785ad88cdaf2ce9535a04c768da6b2f849b13288eeb1e7d0c32dd63f12 WHIRLPOOL 1cfafe3aa96a03625c064b675de78e13bb00efcba50a91eb023f95c7651225113f7ac4d6d9be375a44b210a06fee25f4b47d26d6d7adc30032563ca669bc7cfd
 MISC metadata.xml 239 SHA256 86612dd5d750f67144096aedfc952009d09cefd9e8cf31d2b48374816b98c1d5 SHA512 5fff7c87153874b7d5fd7ef64cba848cf7ee74b3ab4bf540be0a44ed44fe0a810d0bf99738343e6dd4a10ffc945725885eb69bf34ba378032b95caae04ae5208 WHIRLPOOL 5f5ee21048cee0f047371d286916b5e465cb2ab70a79b2fab053349e7b43cdff4ea94886f177c34555188018e892b9471039dfa259934d0036a49383bb966ded
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU27B9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgAOMQANFQUGvfmYG31MhqA3k3sA+X
-wjBJYdT19Tu3kOQW3/fd1uzcqteP9kozXCtsabxQkJpQDuRhmgcCE6JsfwYr/9eh
-FeF5+62YVgSznEQBiad8g1mmCeZAZ7sK/af1mHyrXMoG8IbMCEVpUeIdvaEHuJyi
-6T4AxBbZNUzZr0f0RHLfbJCX+MUoJDXB2UpWAzvEueAswjOLmPz5izEi2j9FOmQe
-Gwf8G+C0vTL822iJUD518erIdXSIm97ySJolmRSEeRE6BNaI1HStQ8xq7zndqTFv
-k9Nywl/fwIC1fBfojorSZMKITLkAvdR7SOOXZZPVO/ZzHj+Dvw80GVnsnOgMHHPX
-CAhcTXaTNzifyhOcKpE+BOKbyWk0m7jHARfoWfixA3DdTXKPZOO+nCo4Pa6PObIT
-lT7E0bkHQzkyjhZBMJ/Jd4VfgDi1i1vcyrCKSL45ANYDEsToYTLvW0mRthyBwJyL
-jrO9jJvjWMBcIoRLQaGHDpkxhArn4sMaA9H54G0nFtGFDaA1KdhNwa8+s8w3Ws6a
-J/7QHpQTHQXO3dbN1gZaMohjXRLddXXVRKdQl1gwZfcm/szdGfa4YZ9yO1YLGJOx
-Zdu4RQGba8XG7bV2aReKFD0yzxuDcg3evCqkqKSFNoKKKN36U+/Do+sT6zgF1z+3
-DY/+rrBprPMen/qdSakk
-=dDkq
+iQGcBAEBCAAGBQJU2+JbAAoJEJQzkH1pP7W4CL4L/117/+qtgBGr7Nq0eyxDkQEO
+77r42LLsiEmdLq/CAEbUW3SUJferE83EdDeaCcTu/okXpn3kJ9sx7/+NKrUWu2M8
+TEm1v0h0CGWBdAjk46mqfzfeyoYxTJMxxjokt/RSV0jFStW3f5EYZhQAse7gLz7o
+nOR9Pnnu7PWtd/fHYvuVxV8kKLwU8a4BtaPiPIhchgqLZdxITxPzDPQitnD+E2Bb
+2/C6q8VG7JrflgCgdINqORKvoVmOiFQwlLgDVWF5gS+D5/xZpm5klH297VXThMRW
+ip+aYhHlykPhuXtHoqaWgLReky1Gcks+ISRiUEUdtRhcgOBjPNcRhsyQ2WUm3R1P
+7FIf4fFTRtEI3gGGBQKgU0uilhlmRgv6Nsn5S3x5AnhRIa2Oadkk8x8rjqFfc/lY
+/5kJ/xrKOVP1cUZzGfDerDnFMYxYuj2TQBwDIo+Y0oraKJhZJor77+w4ywHFNsfz
+742uRGTuRkfa8QGcPtsAaMjut12x7YxwZonRWbYJzg==
+=p+Q0
 -----END PGP SIGNATURE-----
