@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsxd/zsxd-1.7.1-r1.ebuild,v 1.2 2014/12/27 19:33:44 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsxd/zsxd-1.7.1-r1.ebuild,v 1.3 2015/02/11 23:07:46 ulm Exp $
 
 EAPI=5
 
@@ -14,7 +14,7 @@ LICENSE="all-rights-reserved CC-BY-SA-3.0 GPL-3"
 SLOT="0"
 KEYWORDS="amd64 ~x86"
 IUSE=""
-RESTRICT="mirror"
+RESTRICT="mirror bindist"
 
 RDEPEND=">=games-engines/solarus-1.1.0
 	<games-engines/solarus-1.2.0"
