@@ -1,6 +1,10 @@
 # ChangeLog for games-rpg/zsxd
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsxd/ChangeLog,v 1.9 2015/02/11 19:41:46 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsxd/ChangeLog,v 1.10 2015/02/11 23:07:46 ulm Exp $
+
+  11 Feb 2015; Ulrich Müller <ulm@gentoo.org> zsxd-1.7.1-r1.ebuild,
+  zsxd-1.9.0.ebuild:
+  [QA] Add mirror and bindist restrictions, bug 539782.
 
   11 Feb 2015; Julian Ospald <hasufell@gentoo.org> metadata.xml:
   drop myself from maintainership
